--- a/styles.css
+++ b/styles.css
@@ -20,5 +20,11 @@ h1, h2, h4 {
     border: 5px solid #efb0c9;
 }
 
+#header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 
