--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,37 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     text-align: center;
     font-family: 'Happy Monkey', cursive;
-    background-color: #a2d2ff;
+    background: #a2d2ff;
     color: #ffffff;
 }
 
-h1, h2, h4 {
+h1, h2, h3, h4, p {
     text-shadow: 0 0 1px black;
 }
 
 #bff-img {
     width: 150px;
     border-radius: 50%;
-    border: 5px solid #efb0c9;
+    border: 6px solid #EFB0C9;
+    margin-bottom: 10px;
+}
+
+/*
+Challenge:
+Make the bday elements look like the
+provided design slide.
+*/
+
+#bday-age {
+    background: #EFB0C9;
+    padding: 6px 10px;
+    border-radius: 4px;
+}
+
+#bday-date {
+    background: #EFB0C9;
+    padding: 6px 10px;
+    border-radius: 4px;
 }
 
 #header {
@@ -25,6 +39,3 @@ h1, h2, h4 {
     flex-direction: column;
     align-items: center;
 }
-
-
-
