adjesting the margins

--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,14 @@ provided design slide.
     background: #EFB0C9;
     padding: 6px 10px;
     border-radius: 4px;
+    margin: 5px 0 10px 0; 
 }
 
 #bday-date {
     background: #EFB0C9;
     padding: 6px 10px;
-    border-radius: 4px;
+    border-radius: 4px; 
+    margin: 0;
 }
 
 #header {
