--- a/styles.css
+++ b/styles.css
@@ -16,24 +16,18 @@ h1, h2, h3, h4, p {
     margin-bottom: 10px;
 }
 
-/*
-Challenge:
-Make the bday elements look like the
-provided design slide.
-*/
-
 #bday-age {
     background: #EFB0C9;
-    padding: 6px 10px;
-    border-radius: 4px;
-    margin: 5px 0 10px 0; 
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px 0 10px 0;
 }
 
 #bday-date {
-    background: #EFB0C9;
-    padding: 6px 10px;
-    border-radius: 4px; 
     margin: 0;
+    background: #EFB0C9;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 #header {
@@ -57,7 +51,19 @@ provided design slide.
 .gift-img {
     margin: 0 auto;
     width: 400px;
+    height: 400px;
     border: 6px solid white;
     border-radius: 10px;
+    background-image: url("images/gift-cover.jpg");
+    background-size: cover;
 }
 
+/*
+Challenge:
+Swap the gift paper image out with
+the happy.gif when you hover over it!
+*/
+
+.gift-img:hover {
+    background-image: url("images/happy.gif");
+}
