--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,22 @@ the happy.gif when you hover over it!
 #gift-img-hot:hover {
     background-image: url("images/hot.gif");
 }
+
+/*
+Challenge:
+Create the "genius" and "badass" GIFt sections.
+
+Texts:
+If I had to describe you with ONE word 👇
+
+The only person as badass as you 💪
+
+*/
+
+#gift-img-genius:hover {
+    background-image: url("images/genius.gif");
+}
+
+#gift-img-badass:hover {
+    background-image: url("images/badass.gif");
+}
