--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 body {
     text-align: center;
     font-family: 'Happy Monkey', cursive;
-    background: #a2d2ff;
+    background: linear-gradient(#a2d2ff, #EFB0C9);    
     color: #ffffff;
-    background: linear-gradient(#e66465, #9198e5);
 }
 
 h1, h2, h3, h4, p {
